[workspace]
members = [
    "src/nexusblocks_backend/main",
    "src/nexusblocks_backend/platform",
    "src/nexusblocks_backend/platform_manager",
    "src/nexusblocks_backend/user",
    "src/nexusblocks_backend/user_manager",
]

[workspace.dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.0"
