[workspace]
members = [
    "backend/main",
    "backend/platform",
    "backend/platform_manager",
    "backend/user",
    "backend/user_manager",
]

[workspace.dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.0"
